Fixed spacing issue in mobile view

--- a/style.css
+++ b/style.css
@@ -654,7 +654,7 @@ body {
     }
 
     .hero-nav-bar {
-        padding: 20px 32px;
+        padding: 20`px 32px;
     }
 
     .hero-nav-bar img {
